Fixed Doughnut chart visibilty in the Dark mode.

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,24 +25,24 @@
   }
 
   .dark {
-    --color-background: oklch(13.85% 0.0238 265.75);
-    --color-foreground: oklch(97.78% 0.0078 264.53);
-    --color-card: oklch(13.85% 0.0238 265.75);
-    --color-card-foreground: oklch(97.78% 0.0078 264.53);
-    --color-popover: oklch(13.85% 0.0238 265.75);
-    --color-popover-foreground: oklch(97.78% 0.0078 264.53);
+    --color-background: oklch(20% 0.0238 265.75);
+    --color-foreground: oklch(75% 0.0078 264.53);
+    --color-card: oklch(20% 0.0238 265.75);
+    --color-card-foreground: oklch(75% 0.0078 264.53);
+    --color-popover: oklch(20% 0.0238 265.75);
+    --color-popover-foreground: oklch(75% 0.0078 264.53);
     --color-primary: oklch(64.53% 0.2545 264.46);
     --color-primary-foreground: oklch(16.86% 0.0283 265.75);
-    --color-secondary: oklch(23.3% 0.0263 265.75);
-    --color-secondary-foreground: oklch(97.78% 0.0078 264.53);
-    --color-muted: oklch(23.3% 0.0263 265.75);
-    --color-muted-foreground: oklch(70.94% 0.0223 256.27);
-    --color-accent: oklch(23.3% 0.0263 265.75);
-    --color-accent-foreground: oklch(97.78% 0.0078 264.53);
+    --color-secondary: oklch(28% 0.0263 265.75);
+    --color-secondary-foreground: oklch(75% 0.0078 264.53);
+    --color-muted: oklch(28% 0.0263 265.75);
+    --color-muted-foreground: oklch(58% 0.0223 256.27);
+    --color-accent: oklch(28% 0.0263 265.75);
+    --color-accent-foreground: oklch(75% 0.0078 264.53);
     --color-destructive: oklch(37.07% 0.1733 30.92);
-    --color-destructive-foreground: oklch(97.78% 0.0078 264.53);
-    --color-border: oklch(23.3% 0.0263 265.75);
-    --color-input: oklch(23.3% 0.0263 265.75);
+    --color-destructive-foreground: oklch(75% 0.0078 264.53);
+    --color-border: oklch(32% 0.0263 265.75);
+    --color-input: oklch(25% 0.0263 265.75);
     --color-ring: oklch(51.35% 0.2255 266.29);
   }
 }
